<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/final_log_bg"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:gravity="center"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="300dip"
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:padding="5dip" >

        <EditText
            android:id="@+id/et_password"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="15dp"
            android:layout_marginTop="10dip"
            android:background="@drawable/roundcornerwhite_border"
            android:ellipsize="end"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:singleLine="true" />

        <EditText
            android:id="@+id/et_username"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_above="@+id/et_password"
            android:layout_alignParentRight="true"
            android:layout_marginRight="15dp"
            android:background="@drawable/roundcornerwhite_border"
            android:ellipsize="end"
            android:hint="@string/username_hint"
            android:singleLine="true" >
        </EditText>

        <CheckBox
            android:id="@+id/ckbox_remember"
            style="@style/CustomCheckboxTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/et_password"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/et_password"
            android:text="@string/remember"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/et_username"
            android:layout_alignBottom="@+id/et_username"
            android:layout_alignParentLeft="true"
            android:layout_toLeftOf="@+id/et_username"
            android:gravity="center"
            android:text="@string/username"
            android:textColor="#ffffff" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/et_password"
            android:layout_alignBottom="@+id/et_password"
            android:layout_alignParentLeft="true"
            android:layout_alignRight="@+id/textView2"
            android:gravity="center"
            android:text="@string/password"
            android:textColor="#ffffff" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/et_password"
            android:layout_alignRight="@+id/et_password"
            android:layout_below="@+id/ckbox_remember"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/btn_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/gry_bg"
                android:text="@string/login"
                android:textColor="#ffffff" />

            <Button
                android:id="@+id/register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dip"
                android:layout_weight="1"
                android:background="@drawable/gry_bg"
                android:text="@string/register"
                android:textColor="#ffffff" />
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>