<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00000000"
    android:orientation="vertical"
    android:padding="3dip" >

    <TextView
        android:id="@+id/fuyupower"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="20dip"
        android:textColor="#000000"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dip"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bug_apply_type"
            android:textColor="#000000" />

        <Spinner
            android:id="@+id/spinner1"
            android:layout_width="200dip"
            android:layout_height="40dip"
            android:layout_marginTop="5dip" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/huzhu_xilie"
                android:textColor="#000000" />

            <Spinner
                android:id="@+id/spinner_xilie"
                android:layout_width="fill_parent"
                android:layout_height="40dip"
                android:layout_marginTop="5dip" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/huzhu_leixing"
                android:textColor="#000000" />

            <Spinner
                android:id="@+id/spinner_leixing"
                android:layout_width="fill_parent"
                android:layout_height="40dip"
                android:layout_marginTop="5dip" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/powers_str"
            android:textColor="#000000" />

        <EditText
            android:id="@+id/power_edt"
            android:layout_width="100dip"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dip"
            android:background="@drawable/roundcorner_yellow_border"
            android:gravity="left|top"
            android:inputType="text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/beizhu"
            android:textColor="#000000" />

        <EditText
            android:id="@+id/context_edt"
            android:layout_width="fill_parent"
            android:layout_height="100dip"
            android:layout_marginTop="5dip"
            android:background="@drawable/roundcorner_yellow_border"
            android:gravity="left|top"
            android:inputType="text" />
    </LinearLayout>

    <Button
        android:id="@+id/submit"
        android:layout_width="100dip"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dip"
        android:background="@drawable/gry_bg"
        android:text="@string/submit_btn"
        android:textColor="#ffffff" />

</LinearLayout>