<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="fill_parent"
        android:layout_height="50dip"
        android:layout_alignParentTop="true"
        android:background="@color/title_bg" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/qvip_emoji_tab_back_normal" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:gravity="center" >

        <EditText
            android:id="@+id/et_password"
            android:layout_width="180dp"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="15dp"
            android:layout_marginTop="10dip"
            android:background="@drawable/roundcornerwhite_border"
            android:ellipsize="end"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:singleLine="true" />

        <EditText
            android:id="@+id/et_email"
            android:layout_width="180dp"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/et_password"
            android:layout_centerVertical="true"
            android:layout_marginRight="15dp"
            android:layout_marginTop="10dip"
            android:background="@drawable/roundcornerwhite_border"
            android:ellipsize="end"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:singleLine="true" />

        <EditText
            android:id="@+id/et_username"
            android:layout_width="180dp"
            android:layout_height="40dp"
            android:layout_above="@+id/et_password"
            android:layout_alignParentRight="true"
            android:layout_marginRight="15dp"
            android:background="@drawable/roundcornerwhite_border"
            android:ellipsize="end"
            android:hint="@string/username_hint"
            android:singleLine="true" >
        </EditText>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/et_username"
            android:layout_alignBottom="@+id/et_username"
            android:layout_alignParentLeft="true"
            android:layout_toLeftOf="@+id/et_username"
            android:gravity="center"
            android:text="@string/username"
            android:textColor="@color/fontWhite" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/et_password"
            android:layout_alignBottom="@+id/et_password"
            android:layout_alignParentLeft="true"
            android:layout_alignRight="@+id/textView2"
            android:gravity="center"
            android:text="@string/password"
            android:textColor="@color/fontWhite" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/et_email"
            android:layout_alignBottom="@+id/et_email"
            android:layout_alignParentLeft="true"
            android:layout_alignRight="@+id/textView3"
            android:gravity="center"
            android:text="@string/email_hint"
            android:textColor="@color/fontWhite" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/et_email"
            android:layout_alignRight="@+id/et_email"
            android:layout_below="@+id/et_email"
            android:layout_marginTop="20dip"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dip"
                android:layout_weight="1"
                android:background="@drawable/gry_bg"
                android:text="@string/register"
                android:textColor="#ffffff" />
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>