<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/final_log_bg"
    android:gravity="center"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/text_tab1"
            android:layout_width="120dip"
            android:layout_height="120dip"
            android:background="@drawable/roundcornerwhite_border"
            android:drawableTop="@drawable/xianchang"
            android:gravity="center"
            android:text="@string/main_tab1" />

        <TextView
            android:id="@+id/text_tab2"
            android:layout_width="120dip"
            android:layout_height="120dip"
            android:layout_marginLeft="20dip"
            android:background="@drawable/roundcornerwhite_border"
            android:drawableTop="@drawable/hangye"
            android:gravity="center"
            android:text="@string/main_tab2" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dip"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/text_tab3"
            android:layout_width="120dip"
            android:layout_height="120dip"
            android:background="@drawable/roundcornerwhite_border"
            android:drawableTop="@drawable/qiye"
            android:gravity="center"
            android:text="@string/main_tab3" />

        <TextView
            android:id="@+id/text_tab4"
            android:layout_width="120dip"
            android:layout_height="120dip"
            android:layout_marginLeft="20dip"
            android:background="@drawable/roundcornerwhite_border"
            android:drawableTop="@drawable/dingdanchaxun"
            android:gravity="center"
            android:text="@string/main_tab4" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/com_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dip"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="gone" >

        <TextView
            android:id="@+id/text_com_list"
            android:layout_width="120dip"
            android:layout_height="120dip"
            android:background="@drawable/roundcornerwhite_border"
            android:drawableTop="@drawable/home_list"
            android:gravity="center"
            android:text="公司列表" />

        <TextView
            android:layout_width="120dip"
            android:layout_height="120dip"
            android:layout_marginLeft="20dip"
            android:background="@drawable/roundcornerwhite_border"
            android:drawableTop="@drawable/xianchang"
            android:gravity="center"
            android:text="@string/main_tab1"
            android:visibility="invisible" />
    </LinearLayout>

</LinearLayout>